[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/plane.png" type="Texture" id=1]
[ext_resource path="res://Aircraft.gd" type="Script" id=2]
[ext_resource path="res://Box.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.8861, 14.1277 )

[node name="Aircraft" type="Area2D"]
z_index = 10
script = ExtResource( 2 )
Box = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.063, 0.063 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.374573, -82.9523 )
scale = Vector2( 2.04304, 1.96886 )
shape = SubResource( 1 )

[node name="DropTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Aircraft_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Aircraft_body_exited"]
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
